解决jwk问题